--- a/config/rbac/auth_proxy_service.yaml
+++ b/config/rbac/auth_proxy_service.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: service
     app.kubernetes.io/instance: controller-manager-metrics-service
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: jokati2
-    app.kubernetes.io/part-of: jokati2
+    app.kubernetes.io/created-by: jokati
+    app.kubernetes.io/part-of: jokati
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-service
   namespace: system
