--- a/config/rbac/leader_election_role.yaml
+++ b/config/rbac/leader_election_role.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: role
     app.kubernetes.io/instance: leader-election-role
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: jokati2
-    app.kubernetes.io/part-of: jokati2
+    app.kubernetes.io/created-by: jokati
+    app.kubernetes.io/part-of: jokati
     app.kubernetes.io/managed-by: kustomize
   name: leader-election-role
 rules:
