--- a/config/rbac/leader_election_role_binding.yaml
+++ b/config/rbac/leader_election_role_binding.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: rolebinding
     app.kubernetes.io/instance: leader-election-rolebinding
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: jokati2
-    app.kubernetes.io/part-of: jokati2
+    app.kubernetes.io/created-by: jokati
+    app.kubernetes.io/part-of: jokati
     app.kubernetes.io/managed-by: kustomize
   name: leader-election-rolebinding
 roleRef:
