--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,15 +1,45 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: manager-role
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: jokati2
-    app.kubernetes.io/part-of: jokati2
-    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  - secrets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - jokati.freepik.com
+  resources:
+  - notifications
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - jokati.freepik.com
+  resources:
+  - notifications/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - jokati.freepik.com
+  resources:
+  - notifications/status
+  verbs:
+  - get
+  - patch
+  - update
