feat: Implement integrations flow
Co-Authored-By: Sebastián Vargas <sebastian.varbel@gmail.com>

--- a/config/samples/jokati_v1alpha1_notification.yaml
+++ b/config/samples/jokati_v1alpha1_notification.yaml
@@ -35,4 +35,5 @@ spec:
   message:
     reason: "PipelineRunTimeout"
     data: |
-      {{- $source := (index . 0) -}}
+      {{- $source := . -}}
+      {{- printf "Hi, I'm on fire: %s/%s" $source.metadata.namespace $source.metadata.name -}}
