feat: Implement name/namespace selectors for Notification resources

--- a/config/crd/bases/jokati.freepik.com_notifications.yaml
+++ b/config/crd/bases/jokati.freepik.com_notifications.yaml
@@ -85,6 +85,10 @@ spec:
                 properties:
                   group:
                     type: string
+                  name:
+                    type: string
+                  namespace:
+                    type: string
                   resource:
                     type: string
                   version:
