--- a/config/samples/notification/alertmanager/jokati_v1alpha1_notification_yaml.yaml
+++ b/config/samples/notification/alertmanager/jokati_v1alpha1_notification_yaml.yaml
@@ -9,15 +9,15 @@ metadata:
     app.kubernetes.io/created-by: jokati
   name: notification-sample-alertmanager-yaml
 spec:
-  # Synchronization parameters
-  synchronization:
-    time: "10s"
-
   # Resource to be watched
   watch:
     group: ""
     version: v1
     resource: configmaps
+
+    # (Optional) It's possible to watch specific resources
+    # name: testing
+    # namespace: default
 
   conditions:
     - name: check-configmap-name
