--- a/config/rbac/notification_viewer_role.yaml
+++ b/config/rbac/notification_viewer_role.yaml
@@ -6,13 +6,13 @@ metadata:
     app.kubernetes.io/name: clusterrole
     app.kubernetes.io/instance: notification-viewer-role
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: jokati
-    app.kubernetes.io/part-of: jokati
+    app.kubernetes.io/created-by: notifik
+    app.kubernetes.io/part-of: notifik
     app.kubernetes.io/managed-by: kustomize
   name: notification-viewer-role
 rules:
 - apiGroups:
-  - jokati.freepik.com
+  - notifik.freepik.com
   resources:
   - notifications
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - jokati.freepik.com
+  - notifik.freepik.com
   resources:
   - notifications/status
   verbs:
