--- a/config/crd/bases/jokati.freepik.com_notifications.yaml
+++ b/config/crd/bases/jokati.freepik.com_notifications.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: notifications.jokati.freepik.com
+  name: notifications.notifik.freepik.com
 spec:
-  group: jokati.freepik.com
+  group: notifik.freepik.com
   names:
     categories:
     - notifications
