--- a/config/rbac/auth_proxy_client_clusterrole.yaml
+++ b/config/rbac/auth_proxy_client_clusterrole.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: clusterrole
     app.kubernetes.io/instance: metrics-reader
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: jokati
-    app.kubernetes.io/part-of: jokati
+    app.kubernetes.io/created-by: notifik
+    app.kubernetes.io/part-of: notifik
     app.kubernetes.io/managed-by: kustomize
   name: metrics-reader
 rules:
