--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: clusterrolebinding
     app.kubernetes.io/instance: manager-rolebinding
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: jokati
-    app.kubernetes.io/part-of: jokati
+    app.kubernetes.io/created-by: notifik
+    app.kubernetes.io/part-of: notifik
     app.kubernetes.io/managed-by: kustomize
   name: manager-rolebinding
 roleRef:
