--- a/charts/notifik/values.yaml
+++ b/charts/notifik/values.yaml
@@ -56,7 +56,7 @@ controller:
   replicaCount: 1
 
   image:
-    repository: ghcr.io/achetronic/notifik
+    repository: ghcr.io/freepik-company/notifik
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
     tag: ""
