fix: Move packages to chart branch

--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -34,6 +34,7 @@ jobs:
         uses: helm/chart-releaser-action@v1.5.0
         with:
           charts_dir: charts
+          packages_with_index: true
         env:
           CR_OWNER: "$GITHUB_REPOSITORY_OWNER"
           CR_GIT_REPO: notifik
