fix: Move packages to chart branch

--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -35,6 +35,7 @@ jobs:
         with:
           charts_dir: charts
           packages_with_index: true
+          pages_branch: helm-registry
         env:
           CR_OWNER: "$GITHUB_REPOSITORY_OWNER"
           CR_GIT_REPO: notifik
