--- a/charts/notifik/templates/configmap.yaml
+++ b/charts/notifik/templates/configmap.yaml
@@ -7,5 +7,5 @@ metadata:
 data:
   notifik.yaml: |
     {{- with .Values.configuration }}
-    {{ toYaml . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
     {{- end }}
