--- a/config/samples/notification/alertmanager/notifik_v1alpha1_notification_json.yaml
+++ b/config/samples/notification/alertmanager/notifik_v1alpha1_notification_json.yaml
@@ -13,7 +13,7 @@ spec:
   watch:
     group: ""
     version: v1
-    resource: configmaps
+    resource: secrets
 
     # (Optional) It's possible to watch specific resources
     # name: testing
