--- a/config/samples/secret.yaml
+++ b/config/samples/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: testing-3
-data:
+  name: testing
+stringData:
   TEST_VAR: "placeholder"
