docs: Set a proper name for sample alerts

--- a/config/samples/notification/webhook/notifik_v1alpha1_notification.yaml
+++ b/config/samples/notification/webhook/notifik_v1alpha1_notification.yaml
@@ -30,7 +30,7 @@ spec:
       value: testing
 
   message:
-    reason: "PipelineRunTimeout"
+    reason: "NameMatchedAlert"
     data: |
       {{- $source := . -}}
       {{- printf "Hi, I'm on fire: %s/%s" $source.metadata.namespace $source.metadata.name -}}
