--- a/config/samples/notification/alertmanager/notifik_v1alpha1_notification_json.yaml
+++ b/config/samples/notification/alertmanager/notifik_v1alpha1_notification_json.yaml
@@ -29,7 +29,7 @@ spec:
       value: testing
 
   message:
-    reason: "PipelineRunTimeout"
+    reason: "NameMatchedAlert"
     data: |
       {{- $source := . -}}
       {{- $now := (now | date "2006-01-02T15:04:05Z07:00") -}}
