--- a/config/samples/notification/webhook/notifik_v1alpha1_notification.yaml
+++ b/config/samples/notification/webhook/notifik_v1alpha1_notification.yaml
@@ -25,12 +25,12 @@ spec:
       # The 'key' field admits vitamin Golang templating (well known from Helm)
       # The result of this field will be compared with 'value' for equality
       key: |
-        {{- $source := . -}}
+        {{- $source := .object -}}
         {{- printf "%s" $source.metadata.name -}}
       value: testing
 
   message:
     reason: "NameMatchedAlert"
     data: |
-      {{- $source := . -}}
+      {{- $source := .object -}}
       {{- printf "Hi, I'm on fire: %s/%s" $source.metadata.namespace $source.metadata.name -}}
