--- a/config/samples/notification/alertmanager/notifik_v1alpha1_notification_json.yaml
+++ b/config/samples/notification/alertmanager/notifik_v1alpha1_notification_json.yaml
@@ -20,7 +20,7 @@ spec:
     # namespace: default
 
   conditions:
-    - name: check-configmap-name
+    - name: check-secret-name
       # The 'key' field admits vitamin Golang templating (well known from Helm)
       # The result of this field will be compared with 'value' for equality
       key: |
@@ -31,12 +31,18 @@ spec:
   message:
     reason: "NameMatchedAlert"
     data: |
+      {{- $evenType := (.eventType | toString) -}}
       {{- $source := .object -}}
+      {{- $previousObject := (.previousObject | default dict) -}}
+      
       {{- $now := (now | date "2006-01-02T15:04:05Z07:00") -}}
+      
       {{- $alertStructure := (printf `
         {
             "startsAt": "%s",
             "annotations": {
+              "eventType": "%s",
+              "previousObject": "%s",
               "additionalProp1": "string",
               "additionalProp2": "string",
               "additionalProp3": "string"
@@ -46,5 +52,5 @@ spec:
               "name": "%s"
             },
             "generatorURL": "string"
-        }` $now $source.metadata.namespace $source.metadata.name) -}}
-      {{- toJson $alertStructure -}}
+        }` $now $evenType ($previousObject| toJson | b64enc) $source.metadata.namespace $source.metadata.name) -}}
+      {{- fromJson $alertStructure | toJson -}}
