--- a/config/samples/config/notifik.yaml
+++ b/config/samples/config/notifik.yaml
@@ -1,12 +1,32 @@
 integrations:
-  # (Optional) Configuration parameters to be able to connect with generic webhooks
-  webhook:
-    url: "https://${WEBHOOK_TEST_USERNAME}:${WEBHOOK_TEST_PASSWORD}@webhook.site/c78d856d-8cb3-41e8-ae1c-964c6e8bf304"
-    headers:
-      X-Scope-OrgID: your-company
 
-  # (Optional) Configuration parameters to be able to connect with Alertmanager
-  alertmanager:
-    url: "https://${TEST_USERNAME}:${TEST_PASSWORD}@webhook.site/c78d856d-8cb3-41e8-ae1c-964c6e8bf304"
-    headers:
-      X-Scope-OrgID: freepik-company
+  # (Optional) Configuration parameters to send generic webhooks
+  - name: webhook-sender
+    type: webhook
+    webhook:
+      url: "https://${WEBHOOK_TEST_USERNAME}:${WEBHOOK_TEST_PASSWORD}@webhook.site/c95d5e66-fb9d-4d03-8df5-47f87ede84d2"
+      verb: GET
+      headers:
+        X-Scope-OrgID: freepik-company
+
+  # (Optional) Configuration parameters to send generic webhooks with validators
+  - name: webhook-sender-with-validator
+    type: webhook
+    webhook:
+      url: "https://${WEBHOOK_TEST_USERNAME}:${WEBHOOK_TEST_PASSWORD}@webhook.site/c95d5e66-fb9d-4d03-8df5-47f87ede84d2"
+      verb: POST
+      validator: alertmanager
+      headers:
+        X-Scope-OrgID: freepik-company
+
+  # (Optional) Configuration parameters to send generic webhooks with validators
+  - name: webhook-sender-with-validator-other
+    type: webhook
+    webhook:
+      url: "https://${WEBHOOK_TEST_USERNAME}:${WEBHOOK_TEST_PASSWORD}@webhook.site/c95d5e66-fb9d-4d03-8df5-47f87ede84d2"
+      verb: PUT
+      validator: alertmanager
+      headers:
+        X-Scope-OrgID: freepik-company
+
+
