fix (chart): env and envFrom sections on deployment

--- a/charts/notifik/templates/deployment.yaml
+++ b/charts/notifik/templates/deployment.yaml
@@ -67,10 +67,12 @@ spec:
           {{- end }}
 
           {{- with .Values.controller.env }}
+          env:
           {{ toYaml . | nindent 10 }}
           {{- end }}
 
           {{- with .Values.controller.envFrom }}
+          envFrom:
           {{ toYaml . | nindent 10 }}
           {{- end }}
 
