--- a/config/rbac/leader_election_role_binding.yaml
+++ b/config/rbac/leader_election_role_binding.yaml
@@ -2,11 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    app.kubernetes.io/name: rolebinding
-    app.kubernetes.io/instance: leader-election-rolebinding
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: notifik
-    app.kubernetes.io/part-of: notifik
+    app.kubernetes.io/name: notifik-next
     app.kubernetes.io/managed-by: kustomize
   name: leader-election-rolebinding
 roleRef:
