fix: set the proper name of the project

--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/name: notifik-next
+    app.kubernetes.io/name: notifik
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager
   namespace: system
