--- a/config/rbac/notification_admin_role.yaml
+++ b/config/rbac/notification_admin_role.yaml
@@ -1,4 +1,4 @@
-# This rule is not used by the project notifik-next itself.
+# This rule is not used by the project notifik itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
 # Grants full permissions ('*') over notifik.freepik.com.
@@ -9,7 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: notifik-next
+    app.kubernetes.io/name: notifik
     app.kubernetes.io/managed-by: kustomize
   name: notification-admin-role
 rules:
