--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,5 +1,5 @@
 # Adds namespace to all resources.
-namespace: notifik-system
+namespace: notifik
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
