feat: Add IntegrationsController

--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -22,6 +22,9 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the {{ .ProjectName }} itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- integration_admin_role.yaml
+- integration_editor_role.yaml
+- integration_viewer_role.yaml
 - notification_admin_role.yaml
 - notification_editor_role.yaml
 - notification_viewer_role.yaml
