--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/notifik.freepik.com_notifications.yaml
+- bases/notifik.freepik.com_integrations.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
