--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -20,6 +20,7 @@ rules:
 - apiGroups:
   - notifik.freepik.com
   resources:
+  - integrations
   - notifications
   verbs:
   - create
@@ -32,12 +33,14 @@ rules:
 - apiGroups:
   - notifik.freepik.com
   resources:
+  - integrations/finalizers
   - notifications/finalizers
   verbs:
   - update
 - apiGroups:
   - notifik.freepik.com
   resources:
+  - integrations/status
   - notifications/status
   verbs:
   - get
