chore: Bump Helm chart version

--- a/charts/notifik/templates/clusterroles/manager.yaml
+++ b/charts/notifik/templates/clusterroles/manager.yaml
@@ -8,6 +8,7 @@ rules:
   - apiGroups:
     - notifik.freepik.com
     resources:
+    - integrations
     - notifications
     verbs:
     - create
@@ -20,12 +21,14 @@ rules:
   - apiGroups:
     - notifik.freepik.com
     resources:
+    - integrations/finalizers
     - notifications/finalizers
     verbs:
     - update
   - apiGroups:
     - notifik.freepik.com
     resources:
+    - integrations/status
     - notifications/status
     verbs:
     - get
