chore: Helm: Delete deprecated RBAC proxy

--- a/charts/notifik/templates/clusterrolebindings/metrics-auth-rolebinding.yaml
+++ b/charts/notifik/templates/clusterrolebindings/metrics-auth-rolebinding.yaml
@@ -2,13 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "notifik.fullname" . }}-proxy
+  name: {{ include "notifik.fullname" . }}-metrics-auth-rolebinding
   labels:
     {{- include "notifik.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "notifik.fullname" . }}-proxy
+  name: {{ include "notifik.fullname" . }}-metrics-auth-role
 subjects:
   - kind: ServiceAccount
     name: {{ include "notifik.serviceAccountName" . }}
