--- a/charts/notifik/templates/clusterroles/metrics-reader.yaml
+++ b/charts/notifik/templates/clusterroles/metrics-reader.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "notifik.fullname" . }}-metrics-reader-role
+  name: {{ include "notifik.fullname" . }}-metrics-reader
   labels:
     {{- include "notifik.labels" . | nindent 4 }}
 rules:
